--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,39 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
+
     repositories {
-        mavenCentral()
+        google()
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-    }
-}
+        classpath 'com.android.tools.build:gradle:3.5.2'
 
-ext {
-    compileSdkVersion = 27
-    buildToolsVersion = "27.0.3"
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
 
 allprojects {
     repositories {
-        mavenCentral()
+        google()
         jcenter()
+        mavenCentral()
+
         maven {
-            url 'https://maven.google.com/'
-            name 'Google'
+            url 'https://jitpack.io'
+
         }
+        maven {
+            url  "http://dl.bintray.com/jayrambhia/maven"
+        }
+        maven { url 'https://dl.bintray.com/drummer-aidan/maven' }
+
+
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
