--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,15 +1,10 @@
 apply plugin: 'com.android.application'
 
-version = VERSION_NAME
-group = GROUP
-
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
-
     defaultConfig {
-        minSdkVersion 13
-        targetSdkVersion 27
+        minSdkVersion 14
+        compileSdkVersion 29
+        targetSdkVersion 29
     }
 
     lintOptions {
@@ -23,7 +18,7 @@ android {
             shrinkResources true
         }
     }
-    buildToolsVersion '27.0.3'
+    buildToolsVersion "29.0.2"
 }
 
 dependencies {
